--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>Summary</h1> 
+    <p>My name is Nimisha Maheshwari</p>
     <p>A motivated B.Tech IT student with a strong foundation in data structures, algorithms, and web development. Eager to contribute to meaningful projects and grow as a software engineer in a forward-thinking organization.</p>
     <h2><img src="phhhhhhhhh.jpg" height="200"</h2>
     <h1>Education</h1>
